2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Outputter.cs: s/Close/Done
	* TextOutputter.cs, XmlOutputter.cs: Flush, don't close the backing.
	* XslTransformProcessor.cs: Flush output when popping, pop at end.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Outputter.cs: Add support for namespaces.

2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslOutput.cs, XslStylesheet.cs,
	XslTransformProcessor.cs: move output logic from XslStylesheet to
	Compiler.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslOutput.cs: add support for encoding.

2003-08-18 Ben Maurer  <bmaurer@users.sourceforge.net>

	* *.cs: Support for xsl:output. (Oleg)

2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: handle extension and excluded namespaces.

2003-08-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XsltCompiledContext.cs, Compiler.cs: copy the XPathNavigator
	from the stylesheet for correct namespace resolution.

2003-08-14 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Compiler.cs : 1) Changed public .ctor() to receive Evidence argument 
	  introduced in .NET 1.1. 2) XmlResolver object is required for 'res'.

2003-08-07 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslTransformProcessor.cs: Add a table to detect when an object
	is busy.
	* XslAttributeSet.cs: Use the above table. Dont throw nullref
	exception when no use-attribute-sets are specified.

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Add support for boolean attributes (yes/no).

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Add method LocalNameOf, to get the local name of a
	string.
	* XslTransformProcessor.cs: Support for setting the XmlResolver.

2003-08-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslAttributeSet.cs: Handle attribute set merging

2003-08-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslTransformProcessor.cs: Add EvaluateNumber method.
