@@ -1,5 +1,11 @@
 2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>
 
+	* Outputter.cs, TextOutputter.cs, XmlOutputter.cs: Implement some
+	of the abstract methods in Outputter, making them call other
+	functions with default values, remove impl's in derived classes.
+
+2003-08-19 Ben Maurer  <bmaurer@users.sourceforge.net>
+
 	* Outputter.cs: s/Close/Done
 	* TextOutputter.cs, XmlOutputter.cs: Flush, don't close the backing.
 	* XslTransformProcessor.cs: Flush output when popping, pop at end.
